Sahara Job sequence benchmark added
The sequence benchmark allows to execute multiple jobs in one context.

Change-Id: Icbfe3ffa6ba2a7d7763dee0af77ee1cd15ad8632

--- a/doc/samples/tasks/scenarios/sahara/jobs/dfsio_job_sequence.yaml
+++ b/doc/samples/tasks/scenarios/sahara/jobs/dfsio_job_sequence.yaml
@@ -1,17 +1,30 @@
 ---
-  SaharaJob.create_launch_job:
+  SaharaJob.create_launch_job_sequence:
     -
       args:
-        job_type: "Java"
-        configs:
-          configs:
-            edp.java.main_class: "org.apache.hadoop.fs.TestDFSIO"
-          args:
-           - "-write"
-           - "-nrFiles"
-           - "10"
-           - "fileSize"
-           - "100"
+        jobs:
+          -
+            job_type: "Java"
+            configs:
+              configs:
+                edp.java.main_class: "org.apache.hadoop.fs.TestDFSIO"
+              args:
+               - "-write"
+               - "-nrFiles"
+               - "10"
+               - "fileSize"
+               - "100"
+          -
+            job_type: "Java"
+            configs:
+              configs:
+                edp.java.main_class: "org.apache.hadoop.fs.TestDFSIO"
+              args:
+               - "-read"
+               - "-nrFiles"
+               - "10"
+               - "fileSize"
+               - "100"
       runner:
         type: "constant"
         times: 4
