--- a/samples/tasks/scenarios/sahara/jobs/dfsio_job_sequence_scaling.yaml
+++ b/samples/tasks/scenarios/sahara/jobs/dfsio_job_sequence_scaling.yaml
@@ -47,7 +47,8 @@
               name: "tests.jar"
               download_url: "http://repo1.maven.org/maven2/org/apache/hadoop/hadoop-hdfs/2.6.0/hadoop-hdfs-2.6.0-tests.jar"
         sahara_cluster:
-          flavor_id: "2"
+          master_flavor_id: "4"
+          worker_flavor_id: "3"
           workers_count: 3
           plugin_name: "vanilla"
           hadoop_version: "2.6.0"
